# django-rest-framework

./: README.md  pyproject.toml  requirements.txt
api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20240718_1459.py
bookstore/: settings.py  urls.py
